syntax = "proto3";

package com.auth;

option java_multiple_files = true;
option java_package = "com.auth";
option java_outer_classname = "AuthProto";
option objc_class_prefix = "HLW";

// The request message containing the user's login credentials
message LoginRequest {
  string email = 1;
  string password_hash = 2;
}

// The response message containing the login result
message LoginResponse {
  bool success = 1;
  string message = 2;
  string hash = 3;
}

// The request message containing the user's signup details
message SignupRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password_hash = 4;
}

// The response message containing the signup result
message SignupResponse {
  bool success = 1;
  string message = 2;
}

// The service definition
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signup(SignupRequest) returns (SignupResponse);
}